--- a/c5_index.html
+++ b/c5_index.html
@@ -20,8 +20,8 @@
 			all-volunteer board of directors. Our mission is to bring nationally and 
 			internationally renowned, thought-provoking speakers who inform, educate, 
 			and entertain our audience! As one or our members told us:</p>
-		<blockquote>&ldquo;Each year I give a ticket package to each of our family members. 
-			I think of it as the gift of knowledge...and that is priceless.&rdquo;</blockquote>
+		<blockquote><em>&ldquo;Each year I give a ticket package to each of our family members.
+			I think of it as the gift of knowledge...and that is priceless.&rdquo;</em></blockquote>
 
 		<h2>Our Ticket Packages</h2>
 		<ul>
@@ -39,7 +39,7 @@
 		<img src="images/chua75.jpg" alt="Amy Chua photo">
 	</main>
 	<footer>
-		<p>&copy; 2022, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
+		<p>&copy; November 1, 2022  Raja'a Humaidi </p>
 	</footer>
 </body>
 </html>
