--- a/c5_index.html
+++ b/c5_index.html
@@ -39,7 +39,7 @@
 		<img src="images/chua75.jpg" alt="Amy Chua photo">
 	</main>
 	<footer>
-		<p>&copy; November 1, 2022  Raja'a Humaidi </p>
+		<p>&copy; Nov-1-2022  Raja'a Humaidi, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
 	</footer>
 </body>
 </html>
